update python main file

--- a/tchat/Pipfile
+++ b/tchat/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 langchain = "*"
 python-dotenv = "*"
+openai = "*"
+langchain-community = "*"
+langchain-openai = "*"
 
 [dev-packages]
 
